搭建环境，完成基本注册测试成功

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -23,7 +23,7 @@
     <!--初始化spring容器-->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath*:applicationContext-dao.xml</param-value>
+        <param-value>classpath*:applicationContext-user.xml</param-value>
     </context-param>
 
     <servlet-mapping>
