完成登录功能

--- a/pom.xml
+++ b/pom.xml
@@ -13,16 +13,27 @@
         <module>web</module>
     </modules>
 
+    <properties>
+        <!--设置jar包版本-->
+        <springfox-version>2.5.0</springfox-version>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.6.1</version>
+                <!--源代码版本和目标代码版本设置为1.7.idea默认为1.5-->
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
             </plugin>
         </plugins>
 
         <resources>
             <resource>
+                <!--将java和resource下的xml，properties文件编译进目标文件-->
                 <directory>src/main/java</directory>
                 <filtering>true</filtering>
                 <includes>
