--- a/api/pom.xml
+++ b/api/pom.xml
@@ -21,7 +21,23 @@
             <artifactId>platform.web</artifactId>
             <version>1.0.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${springfox-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${springfox-version}</version>
+        </dependency>
+
     </dependencies>
+
+
+
 
 
 </project>
