--- a/api/src/main/java/cn/interheart/api/user/entity/validator/User.properties
+++ b/api/src/main/java/cn/interheart/api/user/entity/validator/User.properties
@@ -1,10 +1,8 @@
-test.User.username.NotEmpty=""\u4e0d\u80fd\u4e3a\u7a7a
-test.User.username.Length=""\u7684\u957f\u5ea6\u4e0d\u80fd\u8d85\u8fc7{max}\u4e2a\u5b57\u7b26
-test.User.password.NotEmpty=""\u4e0d\u80fd\u4e3a\u7a7a
-test.User.password.Length=""\u7684\u957f\u5ea6\u4e0d\u80fd\u8d85\u8fc7{max}\u4e2a\u5b57\u7b26
-test.User.gendar.NotEmpty=""\u4e0d\u80fd\u4e3a\u7a7a
-test.User.gendar.Length=""\u7684\u957f\u5ea6\u4e0d\u80fd\u8d85\u8fc7{max}\u4e2a\u5b57\u7b26
-test.User.telephone.NotEmpty=""\u4e0d\u80fd\u4e3a\u7a7a
-test.User.telephone.Length=""\u7684\u957f\u5ea6\u4e0d\u80fd\u8d85\u8fc7{max}\u4e2a\u5b57\u7b26
-test.User.birthday.NotNull=""\u4e0d\u80fd\u4e3a\u7a7a
-test.User.remark.Length=""\u7684\u957f\u5ea6\u4e0d\u80fd\u8d85\u8fc7{max}\u4e2a\u5b57\u7b26
+test.User.username.NotEmpty="\u7528\u6237\u59d3\u540d"\u4e0d\u80fd\u4e3a\u7a7a
+test.User.username.Length="\u7528\u6237\u59d3\u540d"\u7684\u957f\u5ea6\u4e0d\u80fd\u8d85\u8fc7{max}\u4e2a\u5b57\u7b26
+test.User.password.NotEmpty="\u7528\u6237\u5bc6\u7801"\u4e0d\u80fd\u4e3a\u7a7a
+test.User.password.Length="\u7528\u6237\u5bc6\u7801"\u7684\u957f\u5ea6\u4e0d\u80fd\u8d85\u8fc7{max}\u4e2a\u5b57\u7b26
+test.User.gendar.Length="\u6027\u522b"\u7684\u957f\u5ea6\u4e0d\u80fd\u8d85\u8fc7{max}\u4e2a\u5b57\u7b26
+test.User.telephone.Length="\u7535\u8bdd\u53f7\u7801"\u7684\u957f\u5ea6\u4e0d\u80fd\u8d85\u8fc7{max}\u4e2a\u5b57\u7b26
+test.User.remark.Length="\u5907\u6ce8"\u7684\u957f\u5ea6\u4e0d\u80fd\u8d85\u8fc7{max}\u4e2a\u5b57\u7b26
+test.User.createdon.NotNull="\u521b\u5efa\u65f6\u95f4"\u4e0d\u80fd\u4e3a\u7a7a
