--- a/api/pom.xml
+++ b/api/pom.xml
@@ -34,6 +34,12 @@
             <version>${springfox-version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+
     </dependencies>
 
 
